tests/ui/async-await/issues/issue-67893.stderr
error[E0277]: `std::sync::MutexGuard<'_, ()>` cannot be sent between threads safely
  --> $DIR/issue-67893.rs:9:7
   |
LL |     g(issue_67893::run())
   |     - ^^^^^^^^^^^^^^^^^^ `std::sync::MutexGuard<'_, ()>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
  ::: $DIR/auxiliary/issue_67893.rs:9:1
   |
LL | pub async fn run() {
   | ------------------ within this `impl Future<Output = ()>`
   |
   = help: within `impl Future<Output = ()>`, the trait `Send` is not implemented for `std::sync::MutexGuard<'_, ()>`
note: required because it's used within this `async` fn body
  --> $DIR/auxiliary/issue_67893.rs:9:20
   |
LL |   pub async fn run() {
   |  ____________________^
LL | |     let x: Arc<Mutex<()>> = make_arc();
LL | |     f(*x.lock().unwrap()).await;
LL | | }
   | |_^
note: required by a bound in `g`
  --> $DIR/issue-67893.rs:6:14
   |
LL | fn g(_: impl Send) {}
   |              ^^^^ required by this bound in `g`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
